# platform-sim

./: CHANGELOG.md
apps/ai-orchestrator/: pyproject.toml
apps/ai-orchestrator/graphs/: orchestrator.py
apps/ai-orchestrator/nodes/: suggestion.py
apps/ai-orchestrator/services/: llm_config.py  llm_service.py
apps/ai-orchestrator/tests/: test_llm_e2e.py  test_llm_service.py  test_orchestrator.py
multiplatform_mock_openapi_zh/: .dockerignore  .env.example  .gitignore  Makefile  README.md  add.md  agent.md  check_odoo_models.py  docker-compose.yml  package.json  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements.txt  test_odoo_connection.py  test_v35_full_integration.py
multiplatform_mock_openapi_zh/.ai/v1/: AGENTS.md  CODEX_TASK_PROMPT.txt  DEVELOPMENT_RULES.txt  FIRST_EXECUTION_STEPS.txt  PROJECT_CONSTRAINTS.txt  TASK_BREAKDOWN_V1.txt
multiplatform_mock_openapi_zh/.ai/v2/: README.md  V2_ACCEPTANCE_CHECKLIST.md  V2_BACKEND_PHASE1_STATUS.md  V2_FRONTEND_ACCEPTANCE_SUMMARY.md  V2_FRONTEND_PHASE1_STATUS.md  V2_PROJECT_CLOSURE_SUMMARY.md  V2_ROADMAP.md  agent.md
multiplatform_mock_openapi_zh/apps/: README.md
multiplatform_mock_openapi_zh/docs/: README.md
multiplatform_mock_openapi_zh/infra/: README.md
multiplatform_mock_openapi_zh/migrations/: 003_add_integration_sync_status.sql
multiplatform_mock_openapi_zh/odoo-deployment/: docker-compose.yml  run.sh
multiplatform_mock_openapi_zh/providers/: README.md
multiplatform_mock_openapi_zh/scripts/: cleanup_snapshots.py  run_migrations.sh
multiplatform_mock_openapi_zh/tests/: README.md
(+440 files in other folders)
