[project]
name = "omni-csx-v1"
version = "0.1.0"
description = "Omni-CSX V1 monorepo skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.43",
  "psycopg[binary]>=3.2.10",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "apps",
  "packages/domain-models",
  "packages/shared-config",
  "packages/shared-db",
  "packages/provider-sdk",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
